# rp2040-free-rtos-boilerplate

./: .gitignore  CMakeLists.txt  readme.md  rp-2040-config.cmake
FreeRTOS-Kernel/: CMakeLists.txt
src/: main.c
